--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-streamlit==1.12.0  # ou une version plus récente si nécessaire
+streamlit==1.41.0
 requests==2.26.0
 beautifulsoup4==4.10.0
-openai==0.27.0  # ou une version compatible avec ton code
+openai==0.27.0
